--- a/config.toml
+++ b/config.toml
@@ -2,30 +2,30 @@ site_title = "MyArxiv-focusing on llm, vla, vln, ai"
 limit_days = 7
 cache_url = "https://tanghulu6.github.io/MyArxiv/cache.json"
 
-[[sources]]
-limit = 150
-category = "cs.CL"
-title = "Computation and Language"
+# [[sources]]
+# limit = 150
+# category = "cs.CL"
+# title = "Computation and Language"
 
-[[sources]]
-limit = 150
-category = "cs.CV"
-title = "Computer Vision and Pattern Recognition"
+# [[sources]]
+# limit = 150
+# category = "cs.CV"
+# title = "Computer Vision and Pattern Recognition"
 
-[[sources]]
-limit = 150
-category = "cs.IR"
-title = "Information Retrieval"
+# [[sources]]
+# limit = 150
+# category = "cs.IR"
+# title = "Information Retrieval"
 
-[[sources]]
-limit = 150
-category = "cs.LG"
-title = "Machine Learning"
+# [[sources]]
+# limit = 150
+# category = "cs.LG"
+# title = "Machine Learning"
 
-[[sources]]
-limit = 150
-category = "cs.MM"
-title = "Multimedia"
+# [[sources]]
+# limit = 150
+# category = "cs.MM"
+# title = "Multimedia"
 
 [[sources]]
 limit = 200
